calibre/70-deployment-calibre-web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: calibre-web
  namespace: calibre
spec:
  replicas: 1
  selector:
    matchLabels:
      app: calibre-web
  template:
    metadata:
      labels:
        app: calibre-web
    spec:
      containers:
        - name: calibre-web
          image: lscr.io/linuxserver/calibre-web
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8083
          volumeMounts:
            - name: config
              mountPath: /config
            - name: books
              mountPath: /books
              readOnly: true
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: calibre-web-config
        - name: books
          persistentVolumeClaim:
            claimName: calibre-books
