calibre/72-deployment-shelfmark.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shelfmark
  namespace: calibre
spec:
  replicas: 1
  selector:
    matchLabels:
      app: shelfmark
  template:
    metadata:
      labels:
        app: shelfmark
    spec:
      containers:
        - name: shelfmark
          image: ghcr.io/calibrain/shelfmark:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8084
          volumeMounts:
            - name: config
              mountPath: /config
            - name: books
              mountPath: /books
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: shelfmark-config
        - name: books
          persistentVolumeClaim:
            claimName: shelfmark-books
