calibre/40-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: calibre
  namespace: calibre
spec:
  selector:
    app: calibre
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
