calibre/80-svc-calibre-web.yaml
apiVersion: v1
kind: Service
metadata:
  name: calibre-web
  namespace: calibre
spec:
  selector:
    app: calibre-web
  ports:
    - port: 80
      targetPort: 8083
      protocol: TCP
