calibre/90-ingress-calibre-web-automated.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: calibre-web-automated
  namespace: calibre
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-dns
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/use-forwarded-headers: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: books.white.fm
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: calibre-web-automated
                port:
                  number: 80
  tls:
    - hosts:
        - books.white.fm
      secretName: calibre-web-automated-tls
